// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el componente <GifGrid/> Tiene que mostrar correctamente el componente 1`] = `
<Fragment>
  <h3>
     
    samurai
  </h3>
  <h2
    className="animate__animated animate__backInDown"
  >
    Cargando...
  </h2>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas con el componente <GifGrid/> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    samurai
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost.jpg"
    />
  </div>
</Fragment>
`;
